tests/golden/frontend/invalid/parse_missing_expr.vit
entry main at core/app {
  let x: int =
  give 0
}
